style: add will-change to prevent images filter rerender on safari

--- a/src/components/DividerOrnament/styles.module.scss
+++ b/src/components/DividerOrnament/styles.module.scss
@@ -7,6 +7,7 @@
   height: auto;
   padding: 2rem;
   z-index: 199;
+  will-change: filter;
 
   @include for-large-devices {
     max-width: 600px;
